🔧 fix(demo): update asset paths to absolute for reliable resource loading

--- a/backend/app/static/demo.html
+++ b/backend/app/static/demo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voice-Notion | AI 語音筆記助理</title>
-    <link rel="icon" type="image/png" href="img/logo.png">
+    <link rel="icon" type="image/png" href="/static/img/logo.png">
     <!-- Fonts: Outfit for numbers/English & Noto Sans TC for Chinese content -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -150,7 +150,7 @@
             <div class="flex justify-center flex-col items-center gap-4">
                 <div
                     class="w-36 h-36 md:w-40 md:h-40 bg-white rounded-[20%] shadow-2xl shadow-slate-900/40 p-1 flex items-center justify-center overflow-hidden">
-                    <img src="img/logo.png" alt="Voice-Notion Logo" class="w-full h-full object-contain">
+                    <img src="/static/img/logo.png" alt="Voice-Notion Logo" class="w-full h-full object-contain">
                 </div>
                 <div class="space-y-2">
                     <h1 class="text-5xl md:text-7xl font-bold tracking-tight text-white">
@@ -490,7 +490,7 @@
                         <p class="text-sm text-slate-400 leading-relaxed ml-11">開啟「捷徑」App，建立新捷徑並加入「<b>錄音</b>」動作。</p>
                         <div
                             class="aspect-[9/16] max-w-[240px] bg-slate-950/80 rounded-2xl border border-white/5 flex items-center justify-center overflow-hidden ml-11 ring-4 ring-slate-900/50 shadow-2xl">
-                            <img src="img/guide/step1.jpeg" alt="步驟 1: 錄音" class="w-full h-full object-contain">
+                            <img src="/static/img/guide/step1.jpeg" alt="步驟 1: 錄音" class="w-full h-full object-contain">
                         </div>
                     </div>
 
@@ -505,7 +505,8 @@
                                 內容</b>。</p>
                         <div
                             class="aspect-[9/16] max-w-[240px] bg-slate-950/80 rounded-2xl border border-white/5 flex items-center justify-center overflow-hidden ml-11 ring-4 ring-slate-900/50 shadow-2xl">
-                            <img src="img/guide/step2.jpeg" alt="步驟 2: 貼入 JSON" class="w-full h-full object-contain">
+                            <img src="/static/img/guide/step2.jpeg" alt="步驟 2: 貼入 JSON"
+                                class="w-full h-full object-contain">
                         </div>
                     </div>
 
@@ -519,7 +520,7 @@
                         <p class="text-sm text-slate-400 leading-relaxed ml-11">加入「<b>從輸入項目取得辭典</b>」，捷徑會將上方的文字解析為變數。</p>
                         <div
                             class="aspect-[9/16] max-w-[240px] bg-slate-950/80 rounded-2xl border border-white/5 flex items-center justify-center overflow-hidden ml-11 ring-4 ring-slate-900/50 shadow-2xl">
-                            <img src="img/guide/step3.jpeg" alt="步驟 3: 解析" class="w-full h-full object-contain">
+                            <img src="/static/img/guide/step3.jpeg" alt="步驟 3: 解析" class="w-full h-full object-contain">
                         </div>
                     </div>
 
@@ -535,7 +536,8 @@
                         </p>
                         <div
                             class="aspect-[9/16] max-w-[240px] bg-slate-950/80 rounded-2xl border border-white/5 flex items-center justify-center overflow-hidden ml-11 ring-4 ring-slate-900/50 shadow-2xl">
-                            <img src="img/guide/step4.jpeg" alt="步驟 4: API" class="w-full h-full object-contain">
+                            <img src="/static/img/guide/step4.jpeg" alt="步驟 4: API"
+                                class="w-full h-full object-contain">
                         </div>
                     </div>
 
@@ -550,7 +552,7 @@
                             內容。並將捷徑重新命名為「記筆記」。</p>
                         <div
                             class="aspect-[9/16] max-w-[240px] bg-slate-950/80 rounded-2xl border border-white/5 flex items-center justify-center overflow-hidden ml-11 ring-4 ring-slate-900/50 shadow-2xl">
-                            <img src="img/guide/step5.jpeg" alt="步驟 5: 通知" class="w-full h-full object-contain">
+                            <img src="/static/img/guide/step5.jpeg" alt="步驟 5: 通知" class="w-full h-full object-contain">
                         </div>
                     </div>
                 </div>
